      eth0=tuntap,"LAN-Connection 14",00:11:22:33:44:55
      cofs0="C:\My files"
    - New: "ttysX=..." in configuration, launch coserial daemon.
      Internaly parameters "-f DeviceName -m Mode" for colinux-serial-daemon.
      Serial daemon is light usable under WinNT, you can login on /dev/ttyS0
      or redirect serial communication port (COM1 for sample).
  * Console:
    - "set COLINUX_CONSOLE_EXIT_ON_DETACH=1" to close FLTK/NT console
      after shutting down and detach coLinux.
    - Menu Monitor Select is usable to select ones from running instances.
  * Service running:
    - Shutdown the service, if Windows is shutting down.
    - All files and config file no longer needs absolute path names on
      '--install-service'.  Working directory stored for service run later.
  * Kernel:
    - has been updated from 2.6.11 to 2.6.12
    - Bug #1479042: Ignore bootparm "no387", while no emulation is enabled
  * Updated libraries:
    - MinGW from 3.7 to 3.9
    - w32api from 3.2 to 3.4
    - WinPcap from 3.1-beta4 to 3.1
    - FLTK from 1.1.4 to 1.1.6
    - Remove all XML libraries from source
  * Installer:
    - Add new images ArchLinux and FedoraCore5
    - Add locations Australia and SouthAmerica
    - Set SourceForge '?download' as default location
    - Used NSIS version 2.22
  * initrd:
    - Automatic use cofs31 as path to file vmlinux-modules.tar.gz.
    - Print error on console, if initrd can't load.
    - Bugfix: 'root=/dev/...' must no longer the first bootparm for initrd.
  * cofs:
    - Break out the limit of filename length.  Basename length up to
      255 chars.  Fullpath is limited by path depth of 256 directories.
    - Bug #1151757: COFS disallow mutiple mounts.
  * TAP-Win32 device driver
    - version 8.4 update from openvpn-2.1_beta15a
    - usable without admin rights
    - fixed crashing Vista
    - connection speed status 100 MBit/s (show/view only)
    - 'Check for truncated IPv4 packets' diabled