@@ -17,6 +17,27 @@
 #include "defs.h"
 #include "utils.h"
 
+
+/* Workarrount for Intel P4 and Xeon, that's crashing with DEP/noexecute. */
+/* http://download.intel.com/design/Pentium4/specupdt/249199.htm: */
+/* N76  Changes to CR3 Register do not Fence Pending Instruction Page Walks. */
+/* http://download.intel.com/design/Pentium4/manuals/253668.htm: */
+/* 3.12 TRANSLATION LOOKASIDE BUFFERS (TLBS) */
+/* Todo: */
+/* Should be optimised and call only on specifics Xeon and P4 models. */
+/* The INVLPG instruction should better work, but don't know paramters. */
+/* Why CO_ARCH_PAGE_NX is not set ones on init of passage page? */
+#define flush_tlb()							\
+	do {								\
+		unsigned int tmpreg;					\
+									\
+		__asm__ __volatile__(					\
+			"movl %%cr3, %0;              \n"		\
+			"movl %0, %%cr3;  # flush TLB \n"		\
+			: "=r" (tmpreg)					\
+			:: "memory");					\
+	} while (0)
+
 static void nx_protect_switch_wrapper(co_monitor_t *cmon)
 {
 	co_archdep_monitor_t archdep = cmon->archdep;
@@ -26,10 +47,12 @@ static void nx_protect_switch_wrapper(co_monitor_t *cmon)
 	
 	pts_save = (*archdep->fixed_pte) & CO_ARCH_PAGE_NX;
 	*archdep->fixed_pte &= ~CO_ARCH_PAGE_NX;
+	flush_tlb();
 		
 	co_switch();
 
 	*archdep->fixed_pte |= pts_save;
+	flush_tlb();
 	
 	/* interrupts are re-enabled by the caller */
 }
@@ -116,6 +139,8 @@ co_rc_t co_arch_anti_nx_init(co_monitor_t *mon)
 	archdep->antinx_enabled = PTRUE;
 
 	co_host_switch_wrapper_func = nx_protect_switch_wrapper;
+
+	co_debug("nx_protect_switch_wrapper: flush_tlb is active\n");
 
 	return CO_RC(OK);
 
